package org.example.individualbackend.persistance.entity;

public enum RoleEnum {
    FOOTBALL_FAN,
    CUSTOMER_SERVICE,
    ADMIN
}
